--- a/pom.xml
+++ b/pom.xml
@@ -12,29 +12,25 @@
     <dependency>
       <groupId>org.apache.jmeter</groupId>
       <artifactId>ApacheJMeter_core</artifactId>
-      <version>2.11</version>
-      <scope>test</scope>
+      <version>2.13</version>
     </dependency>
 
     <dependency>
       <groupId>org.apache.jmeter</groupId>
+      <artifactId>ApacheJMeter_http</artifactId>
+      <version>2.13</version>
+    </dependency>    
+
+    <dependency>
+      <groupId>org.apache.jmeter</groupId>
       <artifactId>jorphan</artifactId>
-      <version>2.11</version>
-      <scope>test</scope>
+      <version>2.13</version>
     </dependency>
 
     <dependency>
-      <groupId>io.netty</groupId>
-      <artifactId>netty-all</artifactId>
-      <version>5.0.0.Alpha2</version>
-      <scope>test</scope>
-    </dependency>
-
-    <dependency>
-      <groupId>io.netty</groupId>
-      <artifactId>netty-tcnative</artifactId>
-      <version>1.1.33.Fork3</version>
-      <scope>test</scope>
+      <groupId>com.squareup.okhttp3</groupId>
+      <artifactId>okhttp</artifactId>
+      <version>3.5.0</version>
     </dependency>
   </dependencies>
 </project>
