--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,11 @@
   <version>1.0-SNAPSHOT</version>
   <name>HTTP/2 Sampler as JMeter plugin</name>
 
+  <properties>
+    <maven.compiler.source>1.8</maven.compiler.source>
+    <maven.compiler.target>1.8</maven.compiler.target>
+  </properties>
+  
   <dependencies>
 
     <dependency>
